--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,10 @@ repositories {
     mavenCentral()
 }
 
-compileTestJava {
-    options.encoding = 'UTF-8'
+//compileTestJava {
+//    options.encoding = 'UTF-8'
+//}
 
-}
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
