Mvideo and StroyMagazin

--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,10 @@ repositories {
     mavenCentral()
 }
 
-//compileTestJava {
-//    options.encoding = 'UTF-8'
-//}
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+compileJava.options.encoding = "UTF-8"
 
 
 dependencies {
